fix:mobile graphic cards

--- a/src/app/features/game/game/game.component.css
+++ b/src/app/features/game/game/game.component.css
@@ -85,6 +85,68 @@
   border: 1px solid #a8a8a8;
 }
 
+@media (min-width: 870px){
+  .hand{
+    width: 75%;
+    margin: 0 17% 0 8%; 
+    display: flex;
+    flex-direction: row;
+  }
+  .hand-card{
+    margin-right: 1%;
+  }
+}
+
+@media (max-width: 600px){
+  .hand{
+    width: 84%;
+    margin: 0 8% 0 8%; 
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 10px;
+  }
+  .hand-card {
+    width: 100%;
+  }
+
+}
+
+@media (min-width: 600px) and (max-width: 869px){
+  .hand{
+    width: 84%;
+    margin: 0 8% 0 8%; 
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 10px;
+  }
+  .hand-card{
+    width: 100%;
+  }
+
+  .hand-card:nth-child(1),
+  .hand-card:nth-child(2),
+  .hand-card:nth-child(3),
+  .hand-card:nth-child(4),
+  .hand-card:nth-child(5),
+  .hand-card:nth-child(6) {
+    grid-column: span 1;
+  }
+  .hand-card:nth-child(7) {
+    grid-column: 2 / span 1;
+  }
+  .hand-card:nth-child(8) {
+    grid-column: 3 / span 1;
+  }
+  .hand-card:nth-child(9) {
+    grid-column: 4 / span 1;
+  }
+  .hand-card:nth-child(10) {
+    grid-column: 5 / span 1;
+  }
+}
+
 @media (min-width: 1290px){
   #table{  
     width: 40%;
@@ -92,16 +154,6 @@
   }
   .select-container{
     margin: 1% 30% 1%;
-  }
-
-  .hand{
-    width: 75%;
-    margin: 0 17% 0 8%; 
-    display: flex;
-    flex-direction: row;
-  }
-  .drag{
-    width: 20%;
   }
 
 }
@@ -129,36 +181,11 @@
     margin: 1% 8% 1%;
   }
 
-  .hand{
-    margin: 0 15%;
-    width: 70%;
-  }
-
   .normal-text{
     margin-top: 0;
   }
 
 
-}
-
-.game-text{
-  margin: 0 4% 1% 4%;
-  font-weight: bold;
-  padding: 0;
-}
-
-.game-text-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-bottom: 1%;
-}
-
-.score-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 0 8% 0 8%;
 }
 
 @media (min-width: 516px) and (max-width: 600px){
@@ -169,28 +196,41 @@
   .select-container{
     margin: 1% 8% 1%;
   }
-
-  .hand{
-    margin: 0;
+    
+    .normal-text{
+      margin-top: 0;
+    }
+  }
+  
+  @media (max-width: 515px){
+    #table{  
+      margin: 0 8% 0 8%;
+    }
+    .select-container{
+      margin: 5% 8% 5%;
   }
 
-  .normal-text{
-    margin-top: 0;
   }
-}
-
-@media (max-width: 515px){
-  #table{  
+  
+  .game-text{
+    margin: 0 4% 1% 4%;
+    font-weight: bold;
+    padding: 0;
+  }
+  
+  .game-text-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 1%;
+  }
+  
+  .score-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     margin: 0 8% 0 8%;
   }
-  .select-container{
-    margin: 5% 8% 5%;
-  }
-
-  .hand{
-    margin: 0;
-  }
-}
 
 #table{  
   background-color: #52AA5E;
