--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -12,9 +12,9 @@
         <app-gamechat class="text-center game-chat"></app-gamechat>
       </mat-nav-list>
   </mat-sidenav>
-  <div id="info-box" *ngIf="this.madeCall"><p>{{this.currentUser}} ha chiamato {{this.currentCall}} </p></div>
-  <div id="info-box" *ngIf="this.chosesTrump"><p>La briscola è {{this.trumpChoosen}}</p></div>
-  <div id="info-box" *ngIf="this.taglio"><p>TAGLIO</p></div>
+  <!-- <div id="info-box" *ngIf="this.madeCall"><p>{{this.currentUser}} ha chiamato {{this.currentCall}} </p></div>
+  <div id="info-box" *ngIf="this.chosesTrump"><p>La briscola è {{this.trumpChoosen}}</p></div> -->
+  <div id="info-box" *ngIf="this.isNotifyPresent"><p>{{this.notifyMessage}}</p></div>
   <div class="players-name">
     <!-- <mat-icon mat-list-icon class="star">star</mat-icon> -->
     <p [ngClass]="getClass(0)">{{teamA[0]}}</p>
