--- a/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.css
+++ b/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.css
@@ -145,6 +145,30 @@
   outline: none;
   }
 
+  #info-box{
+    position: fixed;
+    top: 100px;
+    left: 20px;
+    background-color: #277E96;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    opacity: 1;
+    width: fit-content;
+    transform: translateY(-20px);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    padding: 0 5%;
+  }
+  
+  #info-box p{
+    margin-right: 1%;
+    color: white;
+    white-space: nowrap;
+    display: inline-block;
+  }
+
   .tick-button{
     border: none;
     vertical-align: middle;
