fix: menu layout, password-reset and hide 2 player button

--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.css
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.css
@@ -1,4 +1,4 @@
-.single-cards  { 
+.single-cards {
   margin: 20px 0;
 }
 
@@ -11,102 +11,108 @@
   font-size: 55px;
 }
 
-.projects-card>mat-card-content {
+.projects-card > mat-card-content {
   max-height: 400px;
   overflow: auto;
 }
 
-.dashboard-container{
+.dashboard-container {
   display: flex;
 }
 
-#select-game-mode{
+#select-game-mode {
   margin-bottom: 0;
 }
 
-.games-buttons{
+.games-buttons {
   display: flex;
   flex-direction: column;
-  margin: 0 15% 0; 
+  margin: 0 15% 0;
 }
 
-#game-button{
-  white-space: nowrap; 
-  overflow: hidden; 
+#game-button {
+  white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.menu-item{
+.menu-item {
   width: 120px;
 }
 
-::placeholder{
+::placeholder {
   color: #0163a1;
-} 
+}
 
-.orange-button .mat-icon{
+.orange-button .mat-icon {
   padding: 2%;
 }
 
-.text{
+.text {
   margin: 0;
 }
 
-#donation{
+#donation {
   margin-bottom: 0 !important;
 }
 
-.vertical-container{
+.vertical-container {
   display: flex;
   flex-direction: column;
   width: 50%;
   margin-left: 7%;
 }
 
-.games-container{
+.games-container {
   width: 50%;
 }
 
-.number-of-players{
+.number-of-players {
   margin-bottom: 3%;
-  padding:1%;
+  padding: 1%;
   border-radius: 30px;
   font-size: 110%;
 }
 
-
-/*status of the games*/
-.waiting_players{
-  color: #52AA5E ;
+.hide {
+  display: none;
 }
 
-.playing{
- color: #DD2D4A;
+.hoverbutton:hover + .hide {
+  display: block;
+}
+
+/*status of the games*/
+.waiting_players {
+  color: #52aa5e;
+}
+
+.playing {
+  color: #dd2d4a;
 }
 
 /*radio button*/
-.radio-label{
+.radio-label {
   color: #000000;
   font-weight: 600;
   font-size: 120%;
 }
 
-.radio-button{
+.radio-button {
   display: flex;
   gap: 1%;
   margin: 3% 20% 3%;
 }
 
-[type=radio],
-[type=checkbox] {
-   -webkit-appearance: none;
-   -moz-appearance:    none;
-   appearance:         none;
+[type="radio"],
+[type="checkbox"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
-
-[type=radio],
-[type=checkbox] {
+[type="radio"],
+[type="checkbox"] {
   width: 20px;
   height: 20px;
   border: solid 1px #cccccc;
@@ -114,9 +120,8 @@
   position: relative;
 }
 
-
-[type=radio]:checked::before,
-[type=checkbox]:checked::before {
+[type="radio"]:checked::before,
+[type="checkbox"]:checked::before {
   content: "";
   width: 14px;
   height: 14px;
@@ -126,14 +131,13 @@
   left: 2px;
 }
 
-[type=radio],
-[type=radio]:checked::before{
+[type="radio"],
+[type="radio"]:checked::before {
   border-radius: 100%;
 }
 
 @media (min-width: 1170px) {
-  .radio-button{
+  .radio-button {
     margin-left: 30%;
   }
-  
 }
