--- a/src/app/features/account/change-password/change-password.component.html
+++ b/src/app/features/account/change-password/change-password.component.html
@@ -5,7 +5,7 @@
 
     <div class="change-pwd-container" fxFlex="40%" fxFlex.md="60%" fxFlex.sm="85%" fxFlex.xs="100%">
 
-      <mat-form-field class="full-width">
+      <!-- <mat-form-field class="full-width">
         <input matInput placeholder="Current Password" formControlName="currentPassword" [type]="hideCurrentPassword ? 'password' : 'text'"
           autocomplete="current-password">
         <mat-icon matSuffix (click)="hideCurrentPassword = !hideCurrentPassword">
@@ -15,7 +15,7 @@
         <mat-error *ngIf="form.controls['currentPassword'].hasError('required')">
           Please enter a your current password
         </mat-error>
-      </mat-form-field>
+      </mat-form-field> -->
 
       <mat-form-field class="full-width">
         <input matInput placeholder="New Password" formControlName="newPassword" [type]="hideNewPassword ? 'password' : 'text'" autocomplete="new-password">
