fix: join, password and button esci in waiting room

--- a/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.html
+++ b/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.html
@@ -82,7 +82,8 @@
         <button
           mat-flat-button
           class="orange-button"
-          (click)="leaveWaitingRoom()">
+          (click)="leaveWaitingRoom()"
+          [routerLink]="['/dashboard/']">
           Esci
         </button>
         <button
