fix: eleventozero mode and gamedone count

--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -35,12 +35,12 @@
               <div class="radio-button">
                 <input
                   type="radio"
-                  id="elevenToZero"
+                  id="eleven2Zero"
                   name="options"
                   [(ngModel)]="isOptionSelected"
                   formControlName="mode"
-                  value="elevenToZero" />
-                <label class="radio-label" for="elevenToZero">11 a 0</label
+                  value="eleven2Zero" />
+                <label class="radio-label" for="eleven2Zero">11 a 0</label
                 ><br />
               </div>
               <div class="button-container">
@@ -155,7 +155,7 @@
         </div>
         <div id="played-games" class="text-center fill-viewport-max-10">
           <h2 class="lightblue-text text">
-            <b>{{ getGameCount() }}</b> Partite giocate:
+            <b>{{ getGameCount() }}</b> Partite giocate
           </h2>
         </div>
 
