feat: socket.io client

--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -109,7 +109,7 @@
                 </mat-menu>
               </div>
             </form>
-            <app-chat class="text-center"></app-chat>
+            <!-- <app-chat class="text-center"></app-chat> -->
           </div>
           <div class="games-container">
             <h2 class="lightblue-text">Partite:</h2>
