fix: messagecomponent and minor visual adjustment

--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -62,8 +62,15 @@
                   <a
                     mat-menu-item
                     class="menu-item"
-                    (click)="this.score.setValue('3'); this.sendCreate()">
-                    <span>ai 3</span>
+                    (click)="this.score.setValue('5'); this.sendCreate()">
+                    <span> Una mano (veloce) </span>
+                  </a>
+
+                  <a
+                    mat-menu-item
+                    class="menu-item"
+                    (click)="this.score.setValue('31'); this.sendCreate()">
+                    <span>ai 31</span>
                   </a>
 
                   <a
