feat: user/game list

--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -167,11 +167,12 @@
         </div>
 
         <div class="col-12 text-center small fill-viewport-max-30">
+<img src="https://www.paypalobjects.com/it_IT/IT/i/btn/btn_donate_SM.gif">
           <a
             id="donation"
             class="orange-button"
             mat-flat-button
-            href="donazione.html"
+            href="donazione"
             target="_blank"
             >Donazione</a
           >
