--- a/src/app/features/users/user-list/user-list.component.html
+++ b/src/app/features/users/user-list/user-list.component.html
@@ -3,14 +3,24 @@
 
     <mat-card>
       <mat-card-content>
-        <h2>Users</h2>
+        <h2>Utenti</h2>
+
+        <div *ngIf="this.userList.length === 0" class="container" fxLayout="row" fxLayoutAlign="center none">
+          <div fxFlex="50%" class="text-center no-records animate">
+            <mat-icon>people_outline</mat-icon>
+            <p>Non ci sono utenti attivi al momento</p>
+          </div>
+          <mat-icon> </mat-icon>
+        </div>
 
         <div class="container" fxLayout="row" fxLayoutAlign="center none">
           <div fxFlex="50%" class="text-center no-records animate">
-            <mat-icon>people_outline</mat-icon>
-            <p>No users exist.</p>
+            <div class="icon-text" *ngFor="let user of userList">
+            <mat-icon class="icon-display">people</mat-icon>
+            {{user}}
+            </div>
           </div>
-          <mat-icon> </mat-icon>
+          <!-- <mat-icon> </mat-icon> -->
         </div>
 
       </mat-card-content>
