fix: graphic improvement

--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -167,7 +167,7 @@
         </div>
 
         <div class="col-12 text-center small fill-viewport-max-30">
-<img src="https://www.paypalobjects.com/it_IT/IT/i/btn/btn_donate_SM.gif">
+<!-- <img src="https://www.paypalobjects.com/it_IT/IT/i/btn/btn_donate_SM.gif" > -->
           <a
             id="donation"
             class="orange-button"
