--- a/src/app/features/account/account-page/account-page.component.html
+++ b/src/app/features/account/account-page/account-page.component.html
@@ -13,7 +13,7 @@
         <div fxFlex></div>
         <div fxFlex="100%">
           <mat-tab-group class="change-pwd" fxFlex.lt-md="100%">
-            <mat-tab class="change-pwd-label" label="Change Password">
+            <mat-tab class="change-pwd-label" label="Cambia password">
               <app-change-password></app-change-password>
             </mat-tab>
           </mat-tab-group>
