--- a/src/app/features/game/all-games/game-list/game-list.component.html
+++ b/src/app/features/game/all-games/game-list/game-list.component.html
@@ -30,7 +30,7 @@
                 <div class="game-status">
                   Status:
                   <span [class]="getStatusClass(game.status)">{{
-                    game.status
+                  getStatusClass(game.status)
                   }}</span>
                 </div>
                 <div class="game-score">Partita ai: {{ game.score }}</div>
