--- a/src/app/features/account/change-password/change-password.component.html
+++ b/src/app/features/account/change-password/change-password.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
-  <p>Use the form below to change your password.</p>
+  <p>Usa il form per cambiare la tua password.</p>
 
   <div fxLayout="row">
 
@@ -18,29 +18,29 @@
       </mat-form-field> -->
 
       <mat-form-field class="full-width">
-        <input matInput placeholder="New Password" formControlName="newPassword" [type]="hideNewPassword ? 'password' : 'text'" autocomplete="new-password">
+        <input matInput style="height:auto;" placeholder="Nuova password" formControlName="newPassword" [type]="hideNewPassword ? 'password' : 'text'" autocomplete="new-password">
         <mat-icon matSuffix (click)="hideNewPassword = !hideNewPassword">
           {{hideNewPassword ? 'visibility' : 'visibility_off'}}
         </mat-icon>
 
         <mat-error *ngIf="form.controls['newPassword'].hasError('required')">
-          Please enter a new password
+          Per favore inserisci una nuova password
         </mat-error>
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <input matInput placeholder="Confirm New Password" formControlName="newPasswordConfirm" [type]="hideNewPassword ? 'password' : 'text'"
+        <input matInput placeholder="Conferma nuova password" formControlName="newPasswordConfirm" [type]="hideNewPassword ? 'password' : 'text'"
           autocomplete="new-password">
         <mat-icon matSuffix (click)="hideNewPassword = !hideNewPassword">
           {{hideNewPassword ? 'visibility' : 'visibility_off'}}
         </mat-icon>
 
         <mat-error *ngIf="form.controls['newPasswordConfirm'].hasError('required')">
-          Please confirm your new password
+          Per favore conferma la tua nuova password
         </mat-error>
       </mat-form-field>
 
-      <button mat-raised-button class="save-button" [disabled]="form.invalid || disableSubmit" (click)="changePassword()">Save</button>
+      <button mat-raised-button class="save-button" [disabled]="form.invalid || disableSubmit" (click)="changePassword()">Salva</button>
 
     </div>
 
